// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parses empty ineligible offenses array 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": {
      "latestHighSanctionDate": 2022-02-02T00:00:00.000Z,
    },
    "usPaNotServingIneligibleAsOffense": {
      "ineligibleOffenses": [],
      "ineligibleSentencesExpirationDate": [],
    },
    "usPaSupervisionLevelIsNotLimited": {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;

exports[`parses null reason fields 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": null,
    "usPaNoHighSanctionsInPastYear": null,
    "usPaNotServingIneligibleAsOffense": null,
    "usPaSupervisionLevelIsNotLimited": {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;

exports[`record parses as expected 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": {
      "latestHighSanctionDate": 2022-02-02T00:00:00.000Z,
    },
    "usPaNotServingIneligibleAsOffense": {
      "ineligibleOffenses": [
        "ABC",
        "DEF",
      ],
      "ineligibleSentencesExpirationDate": [
        2023-06-01T00:00:00.000Z,
        2022-01-01T00:00:00.000Z,
      ],
    },
    "usPaSupervisionLevelIsNotLimited": {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;
